Added Image Field to Card model

--- a/djangocms_semantic_ui/templates/djangocms_semantic_ui/card.html
+++ b/djangocms_semantic_ui/templates/djangocms_semantic_ui/card.html
@@ -16,7 +16,7 @@
             {{ instance.right_bottom_content }}
         </span>
         <span>
-            <a href="mailto:{{ insntance.email }}"><i class="enveloper open icon"></i> {{ insntance.email }}</a>
+            <a href="mailto:{{ instance.email }}"><i class="enveloper open icon"></i> {{ instance.email }}</a>
         </span>
     </div>
 </div>
