--- a/djangocms_semantic_ui/templates/djangocms_semantic_ui/card.html
+++ b/djangocms_semantic_ui/templates/djangocms_semantic_ui/card.html
@@ -1,6 +1,6 @@
 <div class="{{ instance.get_classes }} card">
     <div class="image">
-      <img src="{{ instance.image }}">
+        <img src="{{ instance.photo }}">
     </div>
     <div class="content">
         <div class="header">{{ instance.header }}</div>
