--- a/djangocms_semantic_ui/templates/djangocms_semantic_ui/card.html
+++ b/djangocms_semantic_ui/templates/djangocms_semantic_ui/card.html
@@ -2,7 +2,7 @@
 
 <div class="{{ instance.get_classes }} card">
     <div class="image">
-        <img src="{% static instance.photo.url %}">
+        <img src="{{ instance.photo.url }}">
     </div>
     <div class="content">
         <div class="header">{{ instance.header }}</div>
