--- a/djangocms_semantic_ui/templates/djangocms_semantic_ui/card.html
+++ b/djangocms_semantic_ui/templates/djangocms_semantic_ui/card.html
@@ -7,7 +7,7 @@
     <div class="content">
         <div class="header">{{ instance.header }}</div>
         <div class="meta">
-            {{ instance.position }}
+            {{ instance.company_position }}
         </div>
         <div class="description">
             {{ instance.description }}
@@ -18,7 +18,7 @@
             {{ instance.right_bottom_content }}
         </span>
         <span>
-            <a href="mailto:{{ instance.email }}"><i class="enveloper open icon"></i> {{ instance.email }}</a>
+            <a href="mailto:{{ instance.email }}"><i class="envelope outline icon"></i> {{ instance.email }}</a>
         </span>
     </div>
 </div>
